# bevy_locomotion

./: Cargo.toml  README.md
examples/: gymnasium.rs
src/: lib.rs
src/camera/: effects.rs  look.rs
src/player/: audio.rs  crouch.rs  forceslide.rs  jump.rs  ladder.rs  ledge.rs  movement.rs  plugin.rs  state.rs  stepup.rs
